--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@t3-oss/env-nextjs": "^0.7.0",
     "moment": "^2.29.4",
     "next": "^13.5.4",
