--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@heroicons/react": "^2.0.18",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.7.0",
+    "framer-motion": "^10.6.8",
     "moment": "^2.29.4",
     "next": "^13.5.4",
     "react": "18.2.0",
